fix - aria-labeldbyをbuttonからheaderに変更

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <h2 style="font-size: 24px; font-weight: bold">デフォルト</h2>
       <p>必要最低限の機能を備えた基本のアコーディオンです。</p>
       <p>
-        グループ要素に任意のidを付与することで、それを基準にbuttonとcontentのidの命名に含めることができます。
+        グループ要素に任意のidを付与することで、それを基準にheaderとcontentのidの命名に含めることができます。
         <br />
         （特に設定しない場合でもユニークのidは自動で付与されます）
       </p>
       <br />
       <div id="default" class="js-accordion-group">
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -42,7 +42,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -59,7 +59,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -89,7 +89,7 @@
       <br />
       <div class="js-accordion-group" data-accordion-single-open="true">
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -106,7 +106,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -123,7 +123,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -153,7 +153,7 @@
       <br />
       <div class="js-accordion-group" data-accordion-initial-open-first="true">
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -170,7 +170,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -187,7 +187,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -220,7 +220,7 @@
       <br />
       <div class="js-accordion-group">
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -237,7 +237,7 @@
           </div>
         </section>
         <section class="accordion js-accordion is-active">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
@@ -254,7 +254,7 @@
           </div>
         </section>
         <section class="accordion js-accordion">
-          <h3 class="accordion__header">
+          <h3 class="accordion__header js-accordion-header">
             <button class="accordion__button js-accordion-button" type="button">
               Accordion Item
               <span class="accordion__button__toggle"></span>
